Adds runtime minutes notation to page display

--- a/app/views/comedians/index.erb
+++ b/app/views/comedians/index.erb
@@ -12,7 +12,7 @@
           <section class="special" id="special-#{special.id}">
             <img src="<%= special.thumbnail %>" alt="<%= special.name %> Thumbnail">
             <h5><%= special.name %></h5>
-            <p>Runtime: <%= special.runtime %></p>
+            <p>Runtime: <%= special.runtime %> minutes</p>
           </section>
         <% end %>
       <% end %>
