--- a/app/views/comedians/index.erb
+++ b/app/views/comedians/index.erb
@@ -1,16 +1,14 @@
 <section class="statistics">
-  <article id="average-age">
-    <h3>Average Age:</h3>
-    <p><%= @average_age %></p>
-  </article>
-  <article id="average-runtime">
-    <h3>Average Runtime:</h3>
-    <p><%= @average_runtime %> minutes</p>
-  </article>
-  <article id="city-list">
-    <h3>Cities Represented:</h3>
-    <p><%= @city_list.join(", ") %></p>
-  </article>
+  <h5 class="statistic-item" id="average-age">Average Age:</h5>
+  <p class="statistic-item"><%= @average_age %></p>
+  <h5 class="statistic-item" id="average-runtime">Average Runtime:</h5>
+  <p class="statistic-item"><%= @average_runtime %> minutes</p>
+  <h5 class="statistic-item">Cities Represented:</h5>
+  <ul class="statistic-item" id="city-list">
+    <% @city_list.each do |city| %>
+      <li><%= city %></li>
+    <% end %>
+  </ul>
 </section>
 <% @comedians.each do |comedian| %>
   <section class="comedians" id="comedian-<%= comedian.id %>">
