Improves styling for page

--- a/app/views/nav.erb
+++ b/app/views/nav.erb
@@ -1,3 +1,7 @@
 <nav>
-  <h1>Hello World!</h1>
+  <h1>LaughTracks</h1>
+  <ul>
+    <a href="/comedians"><li><p>All Comedians</p></li></a>
+    <a href="/comedians/new"><li><p>New Comedian</p></li></a>
+  </ul>
 </nav>
