--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1,13 +1,27 @@
 body {
   display: block;
+  position: absolute;
+  top: 5vh;
+  width: 100%;
+  overflow-x: auto;
   background-color: #CCC;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
-  height: 100%;
+  height: 90vh;
+  z-index: 0;
 }
 
 nav {
-  background-color: green;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgb(70, 74, 85);
+  color: white;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
 }
 
 h4 {
@@ -29,6 +43,44 @@ p {
 
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav a {
+  display: inline;
+  text-decoration: none;
+  color: white;
+}
+
+nav h1 {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  width: 70%;
+}
+
+nav ul {
+  display: block;
+  height: 100%;
+}
+
+nav li {
+  display: inline-block;
+  height: 100%;
+}
+
+nav p {
+  margin: 0;
+  position: relative;
+  top: 49%;
+  transform: translateY(-50%);
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+nav li:hover {
+  background-color: #234;
 }
 
 .comedians {
@@ -38,7 +90,7 @@ ul {
   height: 385px;
   border-bottom-style: solid;
   border-width: 5px;
-  border-color: #777;
+  border-color: #789;
 }
 
 .comedian-info {
@@ -51,7 +103,6 @@ ul {
   display: inline-flex;
   align-items: center;
   height: 100%;
-  width: 70%;
   padding-left: 5%;
   overflow-x: scroll;
 }
@@ -59,14 +110,14 @@ ul {
 .special {
   display: inline-block;
   padding-left: 15px;
-  max-width: 17%;
+  width: 140px;
 }
 
 .statistics {
   display: flex;
   align-items: center;
   background-color: #222;
-  color: yellow;
+  color: #DDD;
   height: 30px;
 }
 
@@ -91,4 +142,9 @@ ul {
   left: 50%;
   transform: translateX(-50%);
   width: 60%;
+}
+
+#welcome-image {
+  width: 100%;
+  overflow: hidden;
 }
