Updates new form to look nicer

--- a/app/views/comedians/new.erb
+++ b/app/views/comedians/new.erb
@@ -1,6 +1,7 @@
+<h1>Add a new comedian:</h1>
 <form action="/comedians" method="post">
-  <input type="text" name="comedian[name]" value="Name">
-  <input type="text" name="comedian[age]" value="Age">
-  <input type="text" name="comedian[birthplace]" value="City">
+  <input type="text" name="comedian[name]" placeholder="Name" required>
+  <input type="text" name="comedian[age]" placeholder="Age" required>
+  <input type="text" name="comedian[birthplace]" placeholder="City" required>
   <input type="submit" value="Submit">
 </form>
